--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>Panda-Ecommerce</title>
     <!-- Bootstrap Link-->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <!-- Bootstrap Link-->
+    <!-- CSS Link-->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
         <div class="menu-bar">
             <nav class="navbar navbar-expand-lg navbar-light bg-light">
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="#Home">
                     <img src="images/logo.png" alt="">
                 </a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo02" aria-controls="navbarTogglerDemo02" aria-expanded="false" aria-label="Toggle navigation">
@@ -21,16 +21,16 @@
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo02">
                   <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                     <li class="nav-item active">
-                      <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+                      <a class="nav-link" href="#Home">Home <span class="sr-only">(current)</span></a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link" href="#">shoes</a>
+                      <a class="nav-link" href="#shoes">shoes</a>
                     </li>
                     <li class="nav-item">
-                      <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Backpack</a>
+                      <a class="nav-link " href="#Backpack" tabindex="-1" aria-disabled="true">Backpack</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Contact Us</a>
+                        <a class="nav-link " href="#Contact Us" tabindex="-1" aria-disabled="true">Contact Us</a>
                       </li>
                   </ul>
                   <form class="form-inline my-2 my-lg-0">
@@ -43,13 +43,13 @@
     
     <!-- End menu bar section-->
 
-    <div class="carousel-section">
+    <div class="carousel-section" id="Home">
         <div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
             <div class="carousel-inner">
-              <div class="carousel-item active ">
+              <div class="carousel-item active">
                 <div class="row d-flex align-items-center">
                     <div class="col-md-7">
-                        <h1 class="heading h-tv" >Mi LED TV 4A PRO 32</h1>
+                        <h1 class="heading h-tv">Mi LED TV 4A PRO 32</h1>
                         <p>Country to popular brif, lorem ipsum isnot simply dummy test Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, aliquam.</p>
                         <h1 class="dollar ">$1200</h1>
                         <button>Buy Now</button>
@@ -60,7 +60,7 @@
                 </div>
               </div>
               <div class="carousel-item">
-                <div class="row d-flex align-items-center">
+                <div class="row d-flex align-items-center" >
                     <div class="col-md-7">
                         <h1 class="heading h-hed" >Mi LED TV 4A PRO 32</h1>
                         <p>Country to popular brif, lorem ipsum isnot simply dummy test Lorem ipsum, dolor sit amet consectetur adipisicing elit. Doloremque, aliquam.</p>
@@ -97,8 +97,8 @@
           </div>
     </div>
     <!-- End Carousel section-->
-    <div class="categories-section">
-        <div class="row">
+    <div class="categories-section" id="shoes">
+        <div class="row" >
                 <div class="col-md-4">
                     <div class="watch-categories d-flex align-items-center justify-content-around">
                         <h1>Watch</h1>
@@ -125,7 +125,7 @@
 <!-- end categories-section-->
 
     <div class="shoes-categories-section">
-        <div class="card-deck">
+        <div class="card-deck" id="shoes">
         <div class="card">
             <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
             <div class="card-body">
@@ -158,7 +158,7 @@
 
     <!-- end shoes-section-->
 
-    <div class="bag-section">
+    <div class="bag-section" id="Backpack">
         <div class="card-deck">
                 <div class="card">
                 <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
@@ -195,9 +195,9 @@
                 </div>
           </div>
     </div>
-     <!-- End Shoes section -->
+     <!-- End BackPack section -->
 
-     <div class="footer-section d-flex align-items-center justify-content-center">
+     <div class="footer-section d-flex align-items-center justify-content-center" id="Contact Us">
         <div>
             <h1>LET'S STAY IN TOUCH</h1>
             <p>get updates on sales speciall and more</p>
@@ -205,9 +205,7 @@
             <button> SEND US</button>
         </div>
      </div>
-
-
-
+     <!-- End footer section-->
 
     
 </div>
