--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
      </div>
      <!-- End footer section-->
 
+     <div class="copyright">
+         <p>&copy; 2020 Copyright panda commerce. All right Reserved</p>
+     </div>
     
 </div>
     <!-- Js link-->
